# Green-Hope-Project---Planting-Trees-with-Artificial-Intelligence

./: .replit  ApiTest.tsx  App.tsx  README.md  api_test.py  constants.ts  function-documentation.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  pyproject.toml  replit.md  types.ts  vite.config.ts
attached_assets/: 3_good_Green_Hope_Project_-_Planting_Trees_with_Artificial_Intelli_1771692954183  Pasted--API--1771706946362_1771706946364.txt  Pasted--API--1771707823861_1771707823867.txt  Pasted--API--1771708570511_1771708570512.txt  Pasted--API-Validation-Feb-22-2026-Portkey-Tests-fixed-headers_1771721082552.txt  Pasted--Account-home-Recents-Analytics-logs-Domains-Compute-AI_1771750691401.txt  Pasted--HTML-html-lang-en-head-style-body-transitio-1771814122_1771814122638.txt  Pasted--HTML-html-lang-fa-dir-rtl-head-style-body--17718119884_1771811988468.txt  Pasted--HTML-html-lang-fa-dir-rtl-head-style-body--17718130181_1771813018111.txt  Pasted--HTML-html-lang-fa-dir-rtl-head-style-body--17718136326_1771813632625.txt  Pasted--HTML-html-lang-fa-dir-rtl-head-style-body--17718142059_1771814205947.txt  Pasted--Invalid-hook-call-Hooks-can-only-be-called-inside-of-t_1771715226943.txt  Pasted-2026-02-22T08-27-24-411808Z-Cloning-repository-2026-02-_1771750651017.txt  Pasted-Based-on-your-message-you-want-to-integrate-PoYo-API-in_1771702713825.txt  Pasted-Here-are-the-two-separate-complete-code-blocks-as-reque_1771715950557.txt  Pasted-Skip-to-content-Commands-Packager-files-Config-files-np_1771721429349.txt  SiteSelector_1771811114184.tsx  (+6 more)
(+35 files in other folders)
