[project]
name = "green-hope-project"
version = "0.1.0"
description = "Green Hope Project - Planting Trees with Artificial Intelligence"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.21.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["services", "lib", "components"]
